--- a/default.css
+++ b/default.css
@@ -3,27 +3,27 @@ h1 {
   color:#3399cc;
 }
 h2span{
-  color:#3399cc;
+  color:#330000;
 }
 p{
   font-size:1.75em;
-  color:#3399cc;
+  color:#330000;
 }
 li{
   font-size:1.75em;
-  color:#3399cc;
+  color:#330000;
 }
 
 #lead
 {
-  border-top: #3399cc;
+  border-top: #330000;
   font-size:1.50em;
   text-align: center;
 }
 
 .greeting
 {
-   border-top: #3399cc;
+   border-top: #330000;
   font-size:1.50em;
   text-align: center;
 }
