--- a/default.css
+++ b/default.css
@@ -3,11 +3,11 @@ h1 {
   color:#3399cc;
 }
 h2 span{
-  color:#330000;
+  color:#ff22ff;
 }
 p{
   font-size:1.75em;
-  color:#330000;
+  color:#f38759;
 }
 li{
   font-size:1.75em;
